--- a/rest-api/package.json
+++ b/rest-api/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
